add features page

--- a/transanalytics/dashboard/templates/base.html
+++ b/transanalytics/dashboard/templates/base.html
@@ -75,7 +75,7 @@
         <hr>
         <footer>
             <div class="container">
-                <p>&copy; 2016 Translation Analytics | <a href="{% url 'register' %}">Sign Up</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a></p>
+                <p>&copy; 2016 Translation Analytics | <a href="{% url 'home' %}">Home</a> | <a href="{% url 'register' %}">Sign Up</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a></p>
             </div>
         </footer>
     {% endblock %}
