--- a/transanalytics/dashboard/templates/register.html
+++ b/transanalytics/dashboard/templates/register.html
@@ -9,8 +9,8 @@
             <form class="form-horizontal">
                 <div class="form-group">
                     <div class="input-group">
-                      <input type="text" class="form-control" placeholder="username (email verification)" aria-describedby="username">
-                      <span class="input-group-addon" id="inputEmail">@fedoraproject.org</span>
+                      <span class="input-group-addon" id="basic-addon1">@</span>
+                      <input type="text" class="form-control" placeholder="Username (email verification)" aria-describedby="basic-addon1">
                     </div>
                 </div>
                 <div class="form-group">
