--- a/transanalytics/dashboard/templates/features.html
+++ b/transanalytics/dashboard/templates/features.html
@@ -84,7 +84,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Package list & language sets</h3>
-                    <p style="font-size: medium;">How about consolidate stats for the list of packages for a languages set? Languages set and list of packages can be created and maintained by registered users. Custom view experience.</p>
+                    <p style="font-size: medium;">How about consolidate stats for the list of packages for a language set? Language set and list of packages can be created and maintained by registered users. Custom view experience.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-4  col-sm-5">
                     <hr class="section-heading-spacer">
