--- a/transanalytics/dashboard/templates/home.html
+++ b/transanalytics/dashboard/templates/home.html
@@ -15,6 +15,6 @@
 
 {% block pagecontent %}
 <div style="padding-left:200px">
-    Some Charts and Stats
+    {% include "summary.html" %}
 </div>
 {% endblock %}
