add views, manager and model

--- a/transanalytics/dashboard/templates/summary.html
+++ b/transanalytics/dashboard/templates/summary.html
@@ -1,1 +1,10 @@
 {{ some_string }}
+
+<table class="table table-striped">
+{% for detail, value in platform_details.items %}
+    <tr>
+        <td>{{ detail }}</td>
+        <td>{{ value }}</td>
+    </tr>
+{% endfor %}
+</table>
