fix ui, add auth

--- a/transtats/dashboard/templates/features.html
+++ b/transtats/dashboard/templates/features.html
@@ -3,7 +3,7 @@
 {% block pagebanner %}
     <div style="padding:20px">
       <div class="container well well-lg">
-        <h2>Features</h2>
+        <h2>App features and how it works...</h2>
       </div>
     </div>
 {% endblock %}
@@ -29,7 +29,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Track translation progress</h3>
-                    <p style="font-size: medium;">In development of localised software, translation progress needs to be monitored on the basis of languages and release streams. Transanalytics collects templates, figure-out their translations, analyse statistics and generate reports.</p>
+                    <p style="font-size: medium;">In development of localised software, translation progress needs to be monitored on the basis of languages and release streams. {{ app_name }} collects templates, figure-out their translations, analyse statistics and generate reports.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-1 col-sm-5">
                     <hr class="section-heading-spacer">
@@ -48,7 +48,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Frequent sync with repositories</h3>
-                    <p style="font-size: medium;">Transanalytics pulls data from code and translation repositories at regular intervals to ensure correct and latest data representations. Snapshots are also kept to manage diffs and growth analysis.</p>
+                    <p style="font-size: medium;">{{ app_name }} pulls data from code and translation repositories at regular intervals to ensure correct and latest data representations. Snapshots are also kept to manage diffs and growth analysis.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-4  col-sm-5">
                     <hr class="section-heading-spacer">
@@ -66,7 +66,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Verify with release streams</h3>
-                    <p style="font-size: medium;">Sometimes translation platform shows good progress yet it is found that package released does not contain the latest. Transanalytics never let you miss string freeze and ensure to bundle the latest.</p>
+                    <p style="font-size: medium;">Sometimes translation platform shows good progress yet it is found that package released does not contain the latest. {{ app_name }} never let you miss string freeze and ensure to bundle the latest.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-1 col-sm-5">
                     <hr class="section-heading-spacer">
