--- a/transtats/dashboard/templates/base.html
+++ b/transtats/dashboard/templates/base.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+{% with "Transtats" as app_name %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -9,7 +11,7 @@
     <meta name="author" content="suanand@redhat.com">
     <link rel="icon" href="/static/img/favicon.ico">
 
-    <title>transtats</title>
+    <title>{{ app_name|lower }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -51,6 +53,10 @@
               <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large;">Translation Stats</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'features' %}">Features</a></li>
+                <li class="active"><a href="{% url 'register' %}" role="button">Sign Up &raquo;</a></li>
+              </ul>
               <form class="navbar-form navbar-right">
                 <div class="form-group">
                   <input type="text" placeholder="Email" class="form-control">
@@ -92,4 +98,4 @@
     {% block extrafooter %}{% endblock %}
   </body>
 </html>
-
+{% endwith %}
