add relstream setting page

--- a/transtats/dashboard/templates/settings/notification.html
+++ b/transtats/dashboard/templates/settings/notification.html
@@ -9,5 +9,8 @@
 {% endblock %}
 
 {% block tabcontent %}
-<h5>This section would include notification stuffs!!</h5>
+<h5>This section would include settings for notification stuffs!!</h5><hr/>
+<div class="alert alert-info" role="alert">Heads up! Next release is just a couple of weeks ahead. New translations are available to be pulled.</div>
+<div class="alert alert-success" role="alert">Well done! Your package has latest translations and is ready for approaching release.</div>
+<div class="alert alert-danger" role="alert">Alas! We missed to bundle latest translations for this (RHEL x.y.z) release.</div>
 {% endblock %}
