add packages ui-table

--- a/transtats/dashboard/templates/settings/release_streams.html
+++ b/transtats/dashboard/templates/settings/release_streams.html
@@ -43,7 +43,7 @@
             </p>
             <p>
                 <span style="color:grey">Message bus:</span> {{ relstream.amqp_server }}
-                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
             </p>
             <p>
                 <a href="#" class="btn btn-default" role="button">Edit</a>
