--- a/transtats/dashboard/templates/settings/packages.html
+++ b/transtats/dashboard/templates/settings/packages.html
@@ -1,13 +1,77 @@
 {% extends "settings/settings_base.html" %}
 
+
 {% block extrascript %}
+<script src="/static/js/jquery-1.12.3.js"></script>
+<script src="/static/js/jquery.dataTables.min.js"></script>
+<script src="/static/js/dataTables.bootstrap.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
         $('#tab-packages').addClass('active');
+        $('#packages-table').DataTable();
     })
 </script>
 {% endblock %}
 
 {% block tabcontent %}
-<h5>This section would include packages stuffs!!</h5>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="text-right">
+            <button type="button" class="btn btn-default">Add Package</button>
+        </div>
+    </div>
+</div>
+<hr/>
+<div id="settings-package-content">
+    <table id="packages-table" class="table table-hover table-bordered" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Package</th>
+                <th>Upstream</th>
+                <th>Transplatform</th>
+                <th>Relstream</th>
+                <th>Lang Set</th>
+                <th>Stats Updated</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>Package</th>
+                <th>Upstream</th>
+                <th>Transplatform</th>
+                <th>Relstream</th>
+                <th>Lang Set</th>
+                <th>Stats Updated</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+            </tr>
+        </tfoot>
+        <tbody>
+            {% for package in packages %}
+            <tr>
+                <td>{{ package.package_name }}</td>
+                <td>
+                    <a href="{{ package.upstream_url }}" target="_blank">{{ package.upstream_url }}</a>
+                    <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                </td>
+                <td>
+                    <a href="{{ package.transplatform_url }}" target="_blank">{{ package.transplatform_url }}</a>
+                    <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                </td>
+                <td>{{ package.release_stream_slug }}</td>
+                <td>{{ package.lang_set }}</td>
+                <td>{{ package.transtats_lastupdated }}</td>
+                <td align="center">
+                  <a class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                </td>
+                <td align="center">
+                  <a class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
