--- a/transtats/dashboard/templates/home.html
+++ b/transtats/dashboard/templates/home.html
@@ -3,7 +3,7 @@
 {% block pagebanner %}
     <div style="padding:20px">
       <div class="container well well-lg">
-        <p style="font-size:large;">{{ some_string }}</p>
+        <p style="font-size:large;">{{ description }}</p>
       </div>
     </div>
 {% endblock %}
