--- a/transtats/dashboard/templates/summary.html
+++ b/transtats/dashboard/templates/summary.html
@@ -1,8 +1,3 @@
-<table class="table table-striped">
-{% for detail, value in platform_details.items %}
-    <tr>
-        <td>{{ detail }}</td>
-        <td>{{ value }}</td>
-    </tr>
-{% endfor %}
-</table>
+<div class="container">
+    <h4 style="color-grey">Some charts and graphs.</h4>
+</div>
