--- a/transtats/dashboard/templates/settings/notification.html
+++ b/transtats/dashboard/templates/settings/notification.html
@@ -10,7 +10,9 @@
 
 {% block tabcontent %}
 <h5>This section would include settings for notification stuffs!!</h5><hr/>
-<div class="alert alert-info" role="alert">Heads up! Next release is just a couple of weeks ahead. New translations are available to be pulled.</div>
-<div class="alert alert-success" role="alert">Well done! Your package has latest translations and is ready for approaching release.</div>
-<div class="alert alert-danger" role="alert">Alas! We missed to bundle latest translations for this (RHEL x.y.z) release.</div>
+<div class="alert alert-warning" role="alert">Devel: Heads up! Next release is just a couple of weeks ahead. New translations are available to be pulled.</div>
+<div class="alert alert-success" role="alert">Devel: Well done! Your package has latest translations and is ready for approaching release.</div>
+<div class="alert alert-danger" role="alert">Devel: Alas! We missed to bundle latest translations for this (RHEL x.y.z) release.</div>
+<div style="color:grey"><span class="glyphicon glyphicon glyphicon-calendar"></span> After string freeze...</div>
+<div class="alert alert-info" role="alert">QE: Translation stats looks good for the package X. Please consider for i18n / l10n / technical and quality checks.</div>
 {% endblock %}
