--- a/transtats/dashboard/templates/settings/packages.html
+++ b/transtats/dashboard/templates/settings/packages.html
@@ -16,7 +16,12 @@
 {% block tabcontent %}
 <div class="row">
     <div class="col-xs-12">
-        <div class="text-right">
+        <span class="btn-group btn-breadcrumb">
+            <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
+            <a href="{% url 'settings' %}" class="btn btn-default">Settings</a>
+            <a href="{% url 'settings-packages' %}" class="btn btn-default">Packages</a>
+        </span>
+        <div class="pull-right">
             <button type="button" class="btn btn-default">Add Package</button>
         </div>
     </div>
@@ -64,10 +69,10 @@
                 <td>{{ package.lang_set }}</td>
                 <td>{{ package.transtats_lastupdated }}</td>
                 <td align="center">
-                  <a class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                  <a class="btn btn-default btn-small"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                 </td>
                 <td align="center">
-                  <a class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                  <a class="btn btn-danger btn-small"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                 </td>
             </tr>
             {% endfor %}
