--- a/transtats/dashboard/templates/settings/scheduler.html
+++ b/transtats/dashboard/templates/settings/scheduler.html
@@ -9,22 +9,37 @@
 {% endblock %}
 
 {% block tabcontent %}
-<h5>This section would include scheduler (background jobs) stuffs!!</h5><hr/>
-<div class="container">
-  <h4>Statistics</h4>
-  <p>Sync with Translation Platform every</p>
-  <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">One
-    <span class="caret"></span></button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Three</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nine</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Eighteen</a></li>
-      <li role="presentation" class="divider"></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Never</a></li>
-    </ul>
-      Hour(s).
+<div class="row">
+    <div class="col-xs-12">
+        <span class="btn-group btn-breadcrumb">
+            <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
+            <a href="{% url 'settings' %}" class="btn btn-default">Settings</a>
+            <a href="{% url 'settings-scheduler' %}" class="btn btn-default">Scheduler</a>
+        </span>
+        <span class="pull-right">
+            <button type="button" class="btn btn-default">Add Cron</button>
+        </span>
+    </div>
+</div>
+<hr/>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Statistics</h3>
+  </div>
+  <div class="panel-body">
+    <p>Pull stats from Translation Platform of registered Packages every</p>
+    <div class="dropdown">
+      <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">One
+      <span class="caret"></span></button>
+      <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Three</a></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nine</a></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Eighteen</a></li>
+        <li role="presentation" class="divider"></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Never</a></li>
+      </ul>
+        Hour(s). Or <button type="button" class="btn btn-default">Run Now</button>
+    </div>
   </div>
 </div>
-
 {% endblock %}
